Refactor: move entities to model, update controllers and fix Google Auth